Remove a link if URL is empty; suggested by Bernhard. Trying to fix scrolling when help is too long.

--- a/css/editor.css
+++ b/css/editor.css
@@ -107,6 +107,7 @@ color: white;
 
 .scrollable {
 overflow-y: auto;
+max-height: 15em; 
 }
 
 .leftPanelTab {
